--- a/RockBand4.API/appsettings.Development.json
+++ b/RockBand4.API/appsettings.Development.json
@@ -4,6 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MariaDbConnectionString": "server=localhost;user id=maxgrayer;password=mg123pw;database=rockbandfour"
   }
 }
 
